PDF: use listings package to input/display LICENSE file

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -3367,9 +3367,7 @@ alternative syntax when such an error is encountered.
 \input{input/genericxx.tex}
 
 \chapter{License}
-\begin{verbatim}
-\input{../../LICENSE}
-\end{verbatim}
+\lstinputlisting[language={},breaklines=false,basicstyle=\scriptsize]{../../LICENSE}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % BACKMATTER                                                                  %
