--- a/AUTHORS
+++ b/AUTHORS
@@ -167,7 +167,7 @@ Mike Stillman, Jan Englehardt, Jean-Pierre Flori, Jeroen Demeyer, Shi Bai,
 Qingwen Guan, Frithjof Schulze, Robert Baillie, Oleksandr Motsak, Hans
 Schoenemann, Janko Boehm, Ahmed Soliman, Francois Bissey, Anton Mellit, Daniel
 Roche, Denis Kryskov, Daniel Fabian, Julien Ospald, mgkurtz, Max Goldfar, Max
-Horn, lzmths, Claus Fieker, Volker Braun, Pascal Molin and others.
+Horn, lzmths, Claus Fieker, Volker Braun, Pascal Molin, Srajan Garg and others.
 
 $\bullet$ In addition Michael Abshoff, William Stein and Robert Bradshaw have
 contributed to the build system of FLINT.
