typo fix in manual

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -2055,7 +2055,7 @@ polynomial.
 \epigraph{Factorisation of polynomials over finite fields of
   word-sized characteristic}
 
-The \code{fq_nmod__poly_factor} module is included automatically when
+The \code{fq_nmod_poly_factor} module is included automatically when
 one includes \code{fq_nmod_poly.h}. One should not try to include
 \code{fq_nmod_poly_factor.h} directly.
 
@@ -2132,7 +2132,7 @@ polynomial.
 \epigraph{Factorisation of polynomials over finite fields in Zech
   logarithm representation}
 
-The \code{fq_zech__poly_factor} module is included automatically when
+The \code{fq_zech_poly_factor} module is included automatically when
 one includes \code{fq_zech_poly.h}. One should not try to include
 \code{fq_zech_poly_factor.h} directly.
 
