Fixed doc parser / TeX compilation errors

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -2069,7 +2069,7 @@ one includes \code{fq_nmod_poly.h}. One should not try to include
 
 We represent an element of the finite field as a power of a generator
 for the multiplicative group of the finite field.  In particular, we
-use a root of $f(x))$, where $f(X) \in \mathbf{F}_p[X]$ is a monic,
+use a root of $f(x)$, where $f(X) \in \mathbf{F}_p[X]$ is a monic,
 irreducible polynomial of degree~$n$, as a polynomial in
 $\mathbf{F}_p[X]$ of degree less than $n$.  The underlying data
 structure is just an \code{mp_limb_t}.
@@ -2193,7 +2193,7 @@ output variable.
 % APRCL primality test                                                         %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{aprcl: Primality test for \code{fmpz}}
+\chapter{aprcl: Primality test for \texttt{fmpz}}
 \epigraph{APR-CL primality test}{}
 
 \section{Introduction}
