Documented isomorphism/embedding functionalities

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -1937,6 +1937,7 @@ be chosen for $f(X)$.  Additionally, the user is able to supply their
 own $f(X)$.
 
 \input{input/fq.tex}
+\input{input/fq_embed.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % fq_vec                                                                       %
@@ -2008,6 +2009,7 @@ be chosen for $f(X)$.  Additionally, the user is able to supply their
 own $f(X)$.
 
 \input{input/fq_nmod.tex}
+\input{input/fq_nmod_embed.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % fq_nmod_vec                                                                  %
@@ -2086,6 +2088,7 @@ We required that the order of the field fits inside of an
 to the time and memory needed to compute the Zech logarithm table.
 
 \input{input/fq_zech.tex}
+\input{input/fq_zech_embed.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % fq_zech_vec                                                                  %
