Fix some doc strings and add fmp{p|q}_mpoly to doc build

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -1389,11 +1389,16 @@ We now describe the functions available in \code{fmpz_poly}.
 \chapter{fmpz\_poly\_factor: Polynomial factorisation over $\Z$}
 \epigraph{Factorisation of polynomials over $\Z$}{}
 
-The \code{fmpz_poly_factor} module is included automatically with
-\code{fmpz_poly.h}. One should not try to include \code{fmpz_poly_factor.h}
-directly.
-
 \input{input/fmpz_poly_factor.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Multivariate integer polynomials
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\chapter{fmpz\_mpoly: Multivariate polynomials over arbitrary precision integers}
+\epigraph{Multivariate polynomials over $\Z$}{}
+
+\input{input/fmpz_mpoly.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Rational numbers                                                             %
@@ -1589,6 +1594,15 @@ The output is:
 \end{lstlisting}
 
 \input{input/fmpz_poly_q.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Multivariate integer polynomials
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\chapter{fmpq\_mpoly: Multivariate polynomials over the rationals}
+\epigraph{Multivariate polynomials over $\Q$}{}
+
+\input{input/fmpq_mpoly.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Matrices over integer polynomials                                            %
