--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -788,7 +788,7 @@ patches including 32 bit support
 
 $\bullet$ Alex Best -- Hermite Normal Form implementation including the
 Pernet-Stein algorithm and Smith Normal Form implementation including the
-Iliopoulos and Kannen-Bachem algorithms. Numerous improvements to nullspace,
+Iliopoulos and Kannan-Bachem algorithms. Numerous improvements to nullspace,
 rref and rank computations (Google Summer of Code 2014)
 
 $\bullet$ Thomas DuBuisson -- logical ops for fmpz module, patches to the build
