--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -403,7 +403,7 @@ Visual Studio 2015 Community (or higher version) and:
 \begin{itemize}
 \item an installed version of Python 3
 \item an installed version of Python Tools 
-         for Visual Studio (\url{http://pytools.codeplex.com/})
+         for Visual Studio (\url{https://github.com/Microsoft/PTVS})
 \end{itemize}
 
 Obtain FLINT2 either as a released distribution or clone it using
