--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -671,7 +671,7 @@ functions). \url{http://fredrikj.net/arb/}
 
 $\bullet$ ANTIC (by William Hart and Claus Fieker) -- Algebraic Number
 Theory in C. Includes general number field arithmetic and class group
-computation. \url{https://github.com/wbhart/antic}
+computation. \url{https://github.com/flintlib/antic}
 
 $\bullet$ Bland (by Fredrik Johansson) -- Generic recursive rings over
 the basic FLINT types. \url{https://github.com/fredrik-johansson/bland}
