--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -667,7 +667,7 @@ Some examples of FLINT extension modules include:
 $\bullet$ Arb (by Fredrik Johansson) -- Arbitrary precision floating
 point ball arithmetic with rigorous error bounds, over the real and
 complex numbers (including polynomials, matrices, calculus and special
-functions). \url{http://fredrikj.net/arb/}
+functions). \url{https://fredrikj.net/arb/}
 
 $\bullet$ ANTIC (by William Hart and Claus Fieker) -- Algebraic Number
 Theory in C. Includes general number field arithmetic and class group
@@ -676,7 +676,7 @@ computation. \url{https://github.com/flintlib/antic}
 $\bullet$ Bland (by Fredrik Johansson) -- Generic recursive rings over
 the basic FLINT types. \url{https://github.com/fredrik-johansson/bland}
 
-See the FLINT website \url{http://flintlib.org/} for a full list.
+See the FLINT website \url{https://flintlib.org/} for a full list.
 
 Writing extension modules is trivial. One should include a top level
 directory containing a single directory for each module one wishes to
